# 5a-games

./: README.md
backend/: package-lock.json  package.json  ws-test-jwt.html  ws-test.html
backend/prisma/: schema.prisma
backend/src/: bot.js  index.js
backend/src/config/: websocket.js
backend/src/controllers/: auth.js  game.js  redis.js  room.js  user.js
backend/src/middlewares/: errorHandler.js
backend/src/routes/: auth.js  game.js  room.js  user.js
backend/src/utils/: auth.js  messageHandler.js  redisHandler.js  responseHandler.js
backend/src/websocket/: socketHandler.js
contract/games/: Anchor.toml
contract/games/lib/gem_common/: Cargo.toml
contract/games/programs/gem_bank/: Cargo.toml
contract/games/programs/gem_farm/: Cargo.toml
contract/games/tests/: games.ts
frontend/: package-lock.json  package.json
frontend/public/battle_hero/: index.html
frontend/public/battle_hero/src/: settings.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/blog/: page.tsx
frontend/src/app/blog-details/: page.tsx
frontend/src/app/components/: helper.ts
frontend/src/context/: app-context.tsx  global-state.tsx
frontend/src/data/: BattleHeroToken-abi.ts  blog-data.ts  gallery-data.ts  hero-data.ts  menu-data copy.ts  menu-data.ts  nft-data-mystery.ts  nft-data.ts  product-data.ts  team-data.ts  tournament-data.ts
frontend/src/hooks/: use-sticky.ts  use-text-animation.ts
frontend/src/layout/: wrapper.tsx
frontend/src/types/: blog-type.ts  hero-type.ts  product-type.ts  tournament-type.ts
(+103 files in other folders)
