[package]
name = "gem_bank"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]
name = "gem_bank"
doctest = false

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version="0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
mpl-token-metadata = { version="1.8.1", features = [ "no-entrypoint" ] }
mpl-token-auth-rules = "1.1.0"
bitflags = "1.3.2"
bytemuck = "1.7.2"
static_assertions = "1.1.0"
thiserror = "1.0.30"
gem_common = {path='../../lib/gem_common'}
proc_macros = {path='../../lib/proc_macros'}
arrayref = "0.3.6"
